# Trigraph_lang

./: CMakeLists.txt  README.md  grammatic.txt  main.cc
driver/: driver.cc  driver.hh
examples/: arithm_prigression.trigr  dmitriy_V1.trigr  fib.trigr  game_of_life_v2.trigr
graphics/: graphics.cc  graphics.hh
node/: node.cc  node.hh
parser/: lexer.cc  lexer.l  parser.cc  parser.hh  parser.y
